Make periodic procedures safe to call concurrently